fix memberBlocks() implementation in AethumFluxCacheBlockEntity by also returning self position